bdr.BDR.scala.error
Compilation error:
BDR:2: error: value and is not a member of Boolean
while (isOverMessage() == true and finished == true){
                               ^